--- a/templates/second.html
+++ b/templates/second.html
@@ -20,7 +20,7 @@
     <a href="/">Груз</a>
 
 <body>
-    <h1>Таблица грузов</h1>
+    <h1>Таблица транспорта</h1>
     <table class="table">
         <thead>
             <tr>
